    not content.
15. Fix toggling of all alarms via icon.
16. Allow text of virtual libraries menu to extend onto 2 lines.
17. Add more text to confirmation dialog when deleting a virtual library.
18. Don't toggle between 'i' and play/pause button when showing track info in
    mobile layout.
19. Use active colour for 'i' and full-screen buttons when they are active.

1.4.5
-----
1. Work around artistinfo failures from 'More' by passing artist_id of parent
   command.
2. Fix activation of queue actions moved to main menu when using desktop
   layout.
3. Update German translation - thanks to dolodobendan 
4. If custom actions file not found, return empty JSON response.
5. Immediately action the 'Enable alarms' action - to be consistent with the
   individual alarm toggles.

1.4.4
-----
 1. Fix colour of active repeat/shuffle/dstm buttons in now-playing.
 2. Update French translation - thanks to Franck Berry.
 3. Bolder and coloured header titles.
 4. Fix messed up grid when navigate back from a grid of large items.
 5. Use consistent grid size.
 6. Use theme colour for 'Save settings' button.
 7. Allow custom actions to be hidden via settings password.
 8. Update layout when changed via settings dialog.
 9. Update all players in 'Manage players' dialog when sync changed.
10. Update British English translation.
11. Don't select player when open mini player.

1.4.3
-----
 1. Fix colours for grid select buttons.
 2. Fix emblems on large lists when using dark themes.
 3. Revert to previous splitter library, as new one caused views to be
    recreated when switching desktop/mobile.
 4. Modify splitter code to work better on touch devices.
 5. Include artist image toggle in cache key.
 6. Fix clipping of 'Fixed Volume' text.
 7. Show 'Fixed Volume' text on mini-player.
 8. Better grid size calculation.
 9. Set min widths for browse and queue views for desktop layout.
10. If desktop queue view is too narrow, then move some actions into main